# manpwin

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  KEYBOARD_SHORTCUTS.md  LICENSE  ManpWIN64.sln  README.md  README_OLD.md  create-release-zip.ps1  folders.txt
MPEG/: mpeg.vcxproj
ManpWIN64/: Colour.cpp  Config.cpp  Fractype.h  Hailstone.cpp  Hailstone.h  Keyboard.cpp  Manp.cpp  ManpWIN64.vcxproj  Manpdlg.cpp  Manpwin.cpp  Manpwin.h  Manpwin.rc  MiscDlg.cpp  OtherFunctions.cpp  OtherFunctions.h  Polygon.h  Savefile.cpp  fractalp.cpp  fractalp.h  png.cpp  resource.h  svg.cpp
ZLib/: ZLib.vcxproj
docs/: HAILSTONE.md  SCREENSHOT_GUIDE.md
parser/: parser.vcxproj
qdlib/: QDLib.vcxproj
